# race-engineer

./: .env.example  CLAUDE.md  README.md  config.py  create_icon.py  freeze_pyinstaller.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
engineer/: agent.py  strategy.py
scripts/: check_telemetry.py
telemetry/: __init__.py  aggregator.py  lmu_data.py  mock.py  provider.py  rf2_shared_memory.py
tests/: test_agent.py  test_aggregator.py  test_mock_provider.py  test_provider.py  test_strategy.py  test_tts.py
ui/: app.py  worker.py
voice/: stt.py  tts.py
